Kevin-Exp/results/fsqrt_results/gcc.txt
ATR_0228-145857/fsqrt.c: In function ‘readMemoryByte’:
ATR_0228-145857/fsqrt.c:52:5: warning: implicit declaration of function ‘asm’ [-Wimplicit-function-declaration]
   52 |     asm(
      |     ^~~
ATR_0228-145857/fsqrt.c:53:20: error: expected ‘)’ before ‘:’ token
   53 |         ".rept 30;"
      |                    ^
      |                    )
......
   58 |         : "=m"(result)
      |         ~           
